Previous to speach